--- a/index.css
+++ b/index.css
@@ -1,31 +1,15 @@
-#demoup_stage2_script {
-    left: 103px;
-}
-
-.butonMudiVerMas{
- background-color:#00a2e2;
-    border-radius:5px
-}
-
-.butonMudiVerMas:hover{
-    background-color:#1a4ea2 !important;
-}
-
-.deployMundi {
-    position: absolute;
-    width: 36%;
-    z-index: 10;
-}
-
 .btnsMudiContainer {
+    position: absolute;
     width: max-content;
     height: max-content;
+    right: 0%;
+    top: 0%;
     z-index: 10;
 }
 
 .btnMudi3D {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     position: relative;
     cursor: pointer;
     transition: all .2s ease-in-out;
@@ -38,29 +22,28 @@
 }
 
 .tooltipMudi {
-    background-color: #d8d8d8;
+    background-color: #03457c;
+    color: white;
     font-family: sans-serif;
-    width: 320px;
+    width: 360px;
     font-size: 14px;
-    padding: 13px 13px;
-    border-radius: 4px;
+    padding: 9px 13px;
+    border-radius: 15px;
     text-align: center;
     position: absolute;
-    top: -148%;
-    left: 0%;
+    top: -70%;
+    right: 0%;
     filter: drop-shadow(3px 5px 5px rgba(10, 10, 10, 0.196));
-    color: black;
-    scale: 0.9;
 }
 
 .tooltipMudi::after {
     content: "_";
     position: absolute;
     bottom: -15%;
-    right: 90%;
+    right: 10%;
     width: 10px;
     border-bottom-right-radius: 50px;
-    background-color: #d8d8d8;
+    background-color: #03457c;
     color: transparent;
 }
 
@@ -78,6 +61,7 @@
     background-color: rgba(0, 0, 0, 0.416);
     z-index: 10000000;
     backdrop-filter: blur(5px);
+    user-select: none;
 }
 
 .iframeMudi3D {
@@ -86,11 +70,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 85%;
     border-radius: 10px;
     overflow: hidden;
     filter: drop-shadow(3px 5px 10px rgba(10, 10, 10, 0.532));
+    user-select: none;
 }
 
 .modelMudi {
@@ -201,11 +186,26 @@
 }
 
 .hrTitle {
-    margin-bottom: 20px;
+    margin-bottom: 20px
 }
 
-.pdp-image-section {
-    position: relative;
+/* BTN MAS DETALLES JR*/
+
+.modalMudi__goToSite {
+    position: absolute;
+    right: 2%;
+    bottom: 2%;
+    z-index: 1;
+    width: max-content;
+    padding: 10px 20px;
+    border-radius: 50px;
+    background-color: #03457c;
+    color: white;
+    cursor: pointer;
+}
+
+.modalMudi__goToSite:hover {
+    color: white;
 }
 
 @media screen and (min-width:1400px) and (max-width:1700px) {
@@ -224,8 +224,6 @@
         transition: all .2s ease-in-out;
         transform: scale(.9);
     }
-
-  
 }
 
 @media screen and (min-width:1100px) and (max-width:1399px) {
@@ -244,116 +242,27 @@
         transition: all .2s ease-in-out;
         transform: scale(.8);
     }
-
-    .mudiQR {
-    width: 67%;
-    margin: 0 auto;
-    padding: 10px;
-    background-color: white;
-    border-radius: 10px;
 }
-
-      .butonVerMasMudi{
-        margin: .55rem auto
-    }
-}
-
 
 @media screen and (max-width:500px) {
-
-
-    .btnsMudiContainer {
-        position: absolute;
-        width: max-content;
-        height: max-content;
-        right: 80%;
-        top: 5%;
-        z-index: 10;
-    }
-
-    .btnMudi3D {
-        width: 55px;
-        height: 55px;
-        position: relative;
-        cursor: pointer;
-        transition: all .2s ease-in-out;
-        filter: drop-shadow(0px 0px 5px rgba(10, 10, 10, 0.196));
-    }
-.tooltipMudi {
-    background-color: #d8d8d8;
-    font-family: sans-serif;
-    width: 315px;
-    font-size: 14px;
-    padding: 13px 13px;
-    border-radius: 4px;
-    text-align: center;
-    position: absolute;
-    top: -40%;
-    left: 40px;
-    filter: drop-shadow(3px 5px 5px rgba(10, 10, 10, 0.196));
-    color: black;
-    scale: 0.85;
-    height: 107%;
-}
-
-.tooltipMudi::after{
-    display:none
-}
-
-.butonMudiVerMas{
-    bottom: 17% !important;
-    right:inherit !important;
-    border-radius:5px
-}
-
-
     .iframeMudi3D {
-    background-color: white;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    height: 85%;
-    border-radius: 10px;
-    overflow: hidden;
-    filter: drop-shadow(3px 5px 10px rgba(10, 10, 10, 0.532));
-    top: -6%;
-}
+        background-color: white;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        height: 85%;
+        border-radius: 10px;
+        overflow: hidden;
+        filter: drop-shadow(3px 5px 10px rgba(10, 10, 10, 0.532));
+    }
 
-  .containerQRMudi {
-    position: absolute;
-    top: 110%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 200px;
-    right: -150%;
-    padding: 20px;
-    border-radius: 10px;
-    color: white;
-    transition: all .2s ease-in-out;
-}
-.container-options {
-    bottom: 13px;
-    display: flex;
-    flex-direction: column;
-    font-size: 12px;
-    justify-content: flex-start;
-    left: 7px;
-    position: absolute;
-    -webkit-user-select: none;
-    user-select: none;
-    width: 90%;
-}
-    .detailInfoMudi {
-    opacity: 0;
-    transition: all .2s ease-in-out;
-    width: 52%;
-    text-align: center;
-    right: 0%;
-            position: relative;
-    z-index: 10;
-}
+    .imgBtnAR {
+        width: 160px;
+        height: 80px;
+        cursor: pointer;
+        filter: drop-shadow(3px 5px 5px rgba(10, 10, 10, 0.196));
+    }
+
 }
